# enpm605_ros_spring2025

./: .gitignore  README.md
Lecture10/launch_files_demo/: package.xml  setup.cfg  setup.py
Lecture10/launch_files_demo/launch/: demo1.launch.py  demo2.launch.py  demo3.launch.py  demo5.launch.py  demo6.launch.py  demo7.launch.py  demo8.launch.py
Lecture10/launch_files_demo/launch_files_demo/: camera_demo.py  lidar_demo.py  processing_demo.py  temperature_demo.py
Lecture10/parameters_demo/: package.xml  setup.py
Lecture10/parameters_demo/launch/: demo1.launch.py
Lecture10/parameters_demo/parameters_demo/: camera_demo.py  lidar_demo.py  processing_demo.py  radar_demo.py
Lecture10/remapping_demo/: package.xml  setup.cfg  setup.py
Lecture10/remapping_demo/launch/: demo1.launch.py  demo2.launch.py  demo3.launch.py  demo4.launch.py  demo5.launch.py
Lecture10/remapping_demo/remapping_demo/: camera_demo.py  utils.py
Lecture11/: .gitignore
Lecture11b/rosbot_interaction_demo/: package.xml  setup.cfg  setup.py
Lecture11b/rosbot_interaction_demo/rosbot_interaction_demo/: cube_publisher_demo.py
Lecture11b/rosbot_interfaces/: CMakeLists.txt  package.xml
Lecture11b/rosbot_interfaces/action/: MoveToGoal.action
Lecture11b/rosbot_interfaces/msg/: ColorData.msg
Lecture11b/rosbot_interfaces/srv/: GetGoal.srv
Lecture11b/rosbot_navigation_demo/: package.xml  setup.cfg  setup.py
Lecture11b/rosbot_navigation_demo/config/: goals.yaml
Lecture11b/rosbot_navigation_demo/launch/: navigation_demo.launch.py  service_call_demo.launch.py
Lecture11b/rosbot_navigation_demo/rosbot_navigation_demo/: color_beacon_demo.py  cube_publisher_demo.py  get_goal_service_demo.py  goal_provider_service_server_demo.py  move_to_goal_action_demo.py  move_to_goal_action_server_demo.py  navigation_controller_demo.py  navigation_manager_demo.py  pid_controller_demo.py
Lecture12/aruco_marker_interfaces/: CMakeLists.txt  package.xml
Lecture12/frame_demo/: package.xml  setup.py
Lecture12/frame_demo/frame_demo/: aruco_opencv_detector_demo.py  color_beacon_frame_demo.py  kdl_frame_demo.py
Lecture13/mapping_navigation_demo/: package.xml  setup.cfg  setup.py
Lecture13/mapping_navigation_demo/config/: mapper_params_online_async.yaml
Lecture13/mapping_navigation_demo/launch/: mapping.launch.py  navigation_no_map.launch.py  navigation_old.launch.py  navigation_with_map.launch.py  navigation_with_map_corrected.launch.py
Lecture13/mapping_navigation_demo/mapping_navigation_demo/: navigation_demo_interface.py
Lecture13/mapping_navigation_demo/maps/: husarion_world.pgm  husarion_world.yaml
Lecture13/navigation_demo/: package.xml  setup.py
Lecture14/rosgpt/: package.xml  setup.py
Lecture14/rosgpt/rosgpt/: ros_anthropic_client.py  ros_anthropic_nav2_client.py  ros_anthropic_nav2_control.py  ros_anthropic_nav2_server.py  ros_anthropic_nav2_voice_control.py  ros_anthropic_server.py  rosgpt.py  rosgptparser_turtlesim.py
Lecture8/first_pkg/: package.xml  setup.py
Lecture8/first_pkg/first_pkg/: advanced_node.py  minimal_node.py
Lecture9/executors_demo/: package.xml  setup.cfg  setup.py
Lecture9/executors_demo/executors_demo/: dual_mutex_demo.py  executors_demo.py  reentrant_mutex_demo.py  reentrant_only_demo.py  singlethreaded_demo.py  utils.py
Lecture9/managed_nodes_demo/: package.xml  setup.cfg  setup.py
Lecture9/managed_nodes_demo/managed_nodes_demo/: localization_demo.py  navigation_demo.py  sensor_demo.py
Lecture9/publisher_demo/: package.xml  setup.cfg  setup.py
Lecture9/publisher_demo/publisher_demo/: publisher_demo.py
Lecture9/qos_demo/: package.xml  setup.py
Lecture9/qos_demo/qos_demo/: qos_demo1.py  qos_demo2.py  qos_demo3.py  qos_demo4.py
Lecture9/subscriber_demo/: package.xml  setup.cfg  setup.py
Lecture9/subscriber_demo/subscriber_demo/: subscriber_demo.py
qos_demo/: setup.py
qos_demo/qos_demo/: qos_demo1.py
(+5 files in other folders)
