<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frame_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adon.sf4@gmail.com">zeid</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>python_orocos_kdl_vendor</depend>
  <depend>tf2_ros</depend>
  <depend>rosbot_interfaces</depend>
  <depend>aruco_marker_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
